syntax = "proto2";
option java_package = "net.angrycode.bean";
package bean;
enum DeviceType {
    DEVICE_UNKNOWN = 0;
    PHONE = 1;
    TABLET = 2;
    TV = 3;
}