syntax = "proto2";
option java_package = "net.angrycode.bean";
package bean;
enum OsType {
    OS_UNKNOWN = 0;
    ANDROID = 1;
    IOS = 2;
}